--- a/FrontEnd/src/app/dashboard/dash/chart/chart.component.html
+++ b/FrontEnd/src/app/dashboard/dash/chart/chart.component.html
@@ -1,21 +1,30 @@
 <div class="chart">
-	<div class="graph linechart">
-		<h2 class="graph--header">Sales Over Time</h2>
-		<canvas baseChart width="2" height="1"
-            [datasets]="lineChartData"
-            [labels]="lineChartLabels"
-            [options]="ChartOptions"
-            [chartType]="'line'">
-		</canvas>
-	</div>
-	<div class="graph barchart">
-		<h2 class="graph--header">Sales by Region</h2>
-		<canvas baseChart width="2" height="1"
-            [datasets]="barChartData"
-            [labels]="barChartLabels"
-            [options]="ChartOptions"
-            [legend]="barChartLegend"
-            [chartType]="'bar'">
-		</canvas>
-	</div>
+	<div class="chart__graph">
+		<div class="graph--header">
+			Sales by Month
+		</div>
+		<div class="graph">
+			<div [style.flex]="sale.PORTION" 
+			
+			class="graph--bar" *ngFor="let sale of monthlysales"
+			[ngStyle]="{'background-color': 'rgba(128, 128, 128,' + (sale.SALESUM / maxmonthlysale) + ')'}">
+				{{ sale.SALEMONTH.split("T")[0] | date:'MMM' }}
+				<br>
+				{{ sale.SALESUM | currency:'USD':'symbol':'1.0-0' }}
+			</div>
+		</div>
+	</div>	
+	
+	<div class="chart__graph">
+		<div class="graph--header">
+				Sales by Region
+		</div>
+		<div class="graph">
+			<div [style.flex]="sale.PORTION" [ngStyle]="{'background-color': 'rgba(128, 128, 128,' + (sale.SALESUM / maxmonthlysale) + ')'}" class="graph--bar" *ngFor="let sale of regionalsales">
+				{{ sale.SALEREGION }}
+				<br>
+				{{ sale.SALESUM | currency:'USD':'symbol':'1.0-0' }}
+			</div>
+		</div>
+	</div>	
 </div>
