--- a/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.html
+++ b/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.html
@@ -8,7 +8,7 @@
 			{{ kpi.SALESUM | currency:'USD':'symbol':'1.0-0' }}
 		</div>
 		<div class="kpi__card--footer">
-			Transactions: {{ kpi.SALECOUNT }}
+			{{ kpi.SALECOUNT }} Sales
 		</div>
 	</div>
 </div>
