--- a/FrontEnd/src/app/shared/footer/footer.component.html
+++ b/FrontEnd/src/app/shared/footer/footer.component.html
@@ -1,32 +1,36 @@
 <footer>
-	<ul class="nav__list">
-		<li class="nav__list--item copyright">
-			<span class="nav__list--link">&copy; Copyright 2018 Niere Theory</span>
-		</li>
-		<li class="nav__list--item">
-			<a href="#" class="nav__list--link">
-				<i class="fab fa-facebook"></i>
-			</a>
-		</li>
-		<li class="nav__list--item">
-			<a href="#" class="nav__list--link">
-				<i class="fab fa-twitter"></i>
-			</a>
-		</li>
-		<li class="nav__list--item">
-			<a href="#" class="nav__list--link">
-				<i class="fab fa-github"></i>
-			</a>
-		</li>
-		<li class="nav__list--item">
-			<a href="#" class="nav__list--link">
-				<i class="fab fa-instagram"></i>
-			</a>
-		</li>
-		<li class="nav__list--item">
-			<a href="#" class="nav__list--link">
-				<i class="far fa-envelope"></i>
-			</a>
-		</li>
-	</ul>
+	<div class="nav__list">
+		<ul class="nav__list--copyright">
+			<li class="nav__list--item copyright">
+				<span class="nav__list--link">&copy; Copyright 2018 Niere Theory</span>
+			</li>
+		</ul>
+		<ul class="nav__list--links">
+			<li class="nav__list--item">
+				<a class="nav__list--link">
+					<i class="fab fa-facebook"></i>
+				</a>
+			</li>
+			<li class="nav__list--item">
+				<a class="nav__list--link">
+					<i class="fab fa-twitter"></i>
+				</a>
+			</li>
+			<li class="nav__list--item">
+				<a class="nav__list--link">
+					<i class="fab fa-github"></i>
+				</a>
+			</li>
+			<li class="nav__list--item">
+				<a class="nav__list--link">
+					<i class="fab fa-instagram"></i>
+				</a>
+			</li>
+			<li class="nav__list--item">
+				<a class="nav__list--link">
+					<i class="far fa-envelope"></i>
+				</a>
+			</li>
+		</ul>	
+	</div>
 </footer>
