--- a/FrontEnd/src/app/dashboard/dash/chart/chart.component.css
+++ b/FrontEnd/src/app/dashboard/dash/chart/chart.component.css
@@ -1,4 +1,4 @@
-.chart {
+.charts {
 	display: flex;
 	margin-bottom: 2rem;
 }
@@ -6,6 +6,10 @@
 .chart__graph {
 	flex: 1;
 	background-color: var(--color-primary-white);
+
+	display: flex;
+	flex-flow: column;
+	justify-content: space-between;
 }
 
 .chart__graph:not(:last-child) {
@@ -14,14 +18,13 @@
 
 .graph {
 	padding: 1rem;
-	box-shadow: 0 .5rem 1rem 0 var(--color-light-black);
 
 	flex: 1;
 
 	display: flex;
 	flex-flow: row;
-	align-items: center;
-	justify-content: center;
+	align-items: flex-end;
+	justify-content: flex-end;
 }
 
 .graph--header {
@@ -29,13 +32,11 @@
 	font-weight: 400;
 	text-transform: uppercase;
 	padding-left: .5rem;
-	color: var(--color-light-blue);
+	color: var(--color-primary-white);
+	background-color: var(--color-dark-blue);
 }
 
 .graph--bar {
-	background-color: grey;
-	height: 20rem;
-
 	text-align: center;
 	font-size: 1.5rem;
 	font-weight: 400;
@@ -43,10 +44,25 @@
 
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-end;
 	flex-flow: column;
+	flex: 1;
 }
 
 .graph--bar:not(:last-child) {
-	margin-right: 2px;
+	margin-right: .5rem;
+}
+
+.heat {
+	justify-content: center;
+}
+
+@media only screen and (max-width: 800px) {
+	.charts {
+		flex-flow: column;
+	}
+	.chart__graph {
+		margin-bottom: 1rem;
+		width: 100%;
+	}
 }
