--- a/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.css
+++ b/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.css
@@ -1,16 +1,14 @@
 .kpis {
 	color: var(--color-light-blue);
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-	align-items: center;
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-gap: 2rem;
 	margin-bottom: 2rem;
 }
 
 .kpi__card {
 	background-color: var(--color-primary-white);
 	box-shadow: 0 .5rem 1rem 0 var(--color-light-black);
-	flex: 1;
 	text-align: center;
 	padding: 1rem 2rem;
 }
@@ -18,10 +16,6 @@
 .kpi__card:hover {
 	transform: translateY(-.1rem);
 	box-shadow: 0 1rem 2rem 0 var(--color-light-black);
-}
-
-.kpi__card:not(:last-child) {
-	margin-right: 1rem;
 }
 
 .kpi__card--header {
@@ -37,4 +31,18 @@
 
 .kpi__card--footer {
 	font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 800px) {
+	.kpis {
+		grid-template-columns: repeat(3, 1fr);
+		grid-gap: 1rem;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	.kpis {
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 1rem;
+	}
 }
