--- a/FrontEnd/src/app/shared/footer/footer.component.css
+++ b/FrontEnd/src/app/shared/footer/footer.component.css
@@ -1,14 +1,20 @@
 .nav__list {
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 
+	border-top: 1px solid var(--color-dark-blue);
+	color: var(--color-dark-blue);
+}
+
+.nav__list--copyright, .nav__list--links {
 	list-style-type: none;
 	font-size: 1.5rem;
 	padding: 1rem;
-	border-top: 1px solid var(--color-dark-blue);
-	color: var(--color-dark-blue);
+
+	display: flex;
+	flex-flow: row;
 }
 
 .nav__list--link {
@@ -27,4 +33,16 @@
 
 .nav__list--item:not(:first-child) {
 	margin: 0 .25rem;
+}
+
+@media only screen and (max-width: 600px) {
+	.nav__list {
+		flex-flow: column;
+	}
+	.nav__list--copyright {
+		padding: 1rem 0 0 0;
+	}
+	.nav__list--links {
+		padding: 0;
+	}
 }
