--- a/FrontEnd/src/app/shared/navbar/navbar.component.html
+++ b/FrontEnd/src/app/shared/navbar/navbar.component.html
@@ -6,8 +6,11 @@
 		<li class="nav__list--item">
 			<a routerLink="/new" class="nav__list--link">New</a>
 		</li>
-		<li class="nav__list--item">
+		<!-- <li class="nav__list--item">
 			<a routerLink="/about" class="nav__list--link">About</a>
+		</li> -->
+		<li class="nav__list--item">
+			<a routerLink="/about" class="nav__list--link">Login</a>
 		</li>
 	</ul>
 </nav>
