Login form created

--- a/FrontEnd/src/app/newform/entryform/entryform.component.html
+++ b/FrontEnd/src/app/newform/entryform/entryform.component.html
@@ -1,6 +1,6 @@
 <div class="entrycontainer">
 
-    <h4 class="entry__heading">Enter New Sale</h4>
+    <h4 class="formheader">Enter New Sale</h4>
 
     <form class="form" (ngSubmit)="onSubmit(f)" #f="ngForm" ngNativeValidate>
         <div class="formgroup">
