--- a/FrontEnd/src/app/shared/navbar/navbar.component.html
+++ b/FrontEnd/src/app/shared/navbar/navbar.component.html
@@ -10,7 +10,7 @@
 			<a routerLink="/about" class="nav__list--link">About</a>
 		</li> -->
 		<li class="nav__list--item">
-			<a routerLink="/about" class="nav__list--link">Login</a>
+			<a routerLink="/login" class="nav__list--link">Login</a>
 		</li>
 	</ul>
 </nav>
