--- a/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.html
+++ b/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.html
@@ -1,5 +1,5 @@
 <div class="kpis">
-	<div *ngFor="let kpi of kpis" class="kpi__card">
+	<div *ngFor="let kpi of sKpis" class="kpi__card">
 		<div class="kpi__card--header">
 			{{ kpi.SALEREGION }}
 		</div>
@@ -10,5 +10,5 @@
 		<div class="kpi__card--footer">
 			{{ kpi.SALECOUNT }} Sales
 		</div>
-	</div>
+    </div>
 </div>
