Converted to async wait, completed login base functionality

--- a/FrontEnd/src/app/dashboard/dash/chart/chart.component.html
+++ b/FrontEnd/src/app/dashboard/dash/chart/chart.component.html
@@ -1,5 +1,5 @@
 <div class="charts">
-	<div class="chart__graph">
+	<div *ngIf="sMonthly" class="chart__graph">
 		<div class="graph--header">
 			Sales by Month
 		</div>
@@ -13,7 +13,7 @@
 		</div>
 	</div>	
 	
-	<div class="chart__graph">
+	<div *ngIf="sRegionally" class="chart__graph">
 		<div class="graph--header">
 				Sales by Region
 		</div>
