--- a/FrontEnd/src/app/dashboard/dash/dash.component.html
+++ b/FrontEnd/src/app/dashboard/dash/dash.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="res" class="dash">
+<div class="dash"> <!-- *ngIf="res" -->
     <dash-kpi [sKpis]="sKpis"></dash-kpi>
 	<dash-chart [sMonthly]="sMonthly" [sRegionally]="sRegionally"></dash-chart>
 	<dash-table [sEmployee]="sEmployee" [sTop]="sTop"></dash-table>
 </div>
-
