--- a/FrontEnd/src/app/shared/login/login.component.html
+++ b/FrontEnd/src/app/shared/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="logincontainer">
-    <h4 class="formheader">Login</h4>
+    <h4 class="formheader">Login for Functionality</h4>
 
     <form class="form" (ngSubmit)="onSubmit(f)" #f="ngForm" ngNativeValidate>
         <div class="formgroup">
