--- a/FrontEnd/src/app/newform/entryform/entryform.component.html
+++ b/FrontEnd/src/app/newform/entryform/entryform.component.html
@@ -7,7 +7,10 @@
             <label class="formgroup__label" for="region">Region</label>
             <select ngModel class="formgroup__input" name="Region" id="region" required>
                 <option disabled selected></option>
-                <option *ngFor="let region of regions" [value]="region.REGIONID">{{ region.REGIONNAME }}</option>
+                <option value="1">ASPAC</option>
+                <option value="2">EMEA</option>
+                <option value="3">LATAM</option>
+                <option value="4">NAM</option>
             </select>
         </div>
 
