--- a/FrontEnd/src/app/shared/navbar/navbar.component.html
+++ b/FrontEnd/src/app/shared/navbar/navbar.component.html
@@ -3,14 +3,17 @@
 		<li class="nav__list--item">
 			<a routerLink="/dashboard" class="nav__list--link">Sales Dashboard</a>
 		</li>
-		<li class="nav__list--item">
-			<a routerLink="/new" class="nav__list--link">New</a>
+		<li *ngIf="loginService.userID" class="nav__list--item">
+			<a routerLink="/new" class="nav__list--link">Add Sale</a>
 		</li>
 		<!-- <li class="nav__list--item">
 			<a routerLink="/about" class="nav__list--link">About</a>
 		</li> -->
-		<li class="nav__list--item">
+		<li *ngIf="!loginService.userID" class="nav__list--item">
 			<a routerLink="/login" class="nav__list--link">Login</a>
+        </li>
+        <li *ngIf="loginService.userID" class="nav__list--item">
+			<a routerLink="/logout" class="nav__list--link">Logout</a>
 		</li>
 	</ul>
 </nav>
