--- a/FrontEnd/src/app/shared/footer/footer.component.html
+++ b/FrontEnd/src/app/shared/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer>
-	<div class="nav__list">
+	<!-- <div class="nav__list">
 		<ul class="nav__list--copyright">
-			<li class="nav__list--item copyright">
-				<span class="nav__list--link">&copy; Copyright 2018 Niere Theory</span>
-			</li>
-		</ul>
-		<ul class="nav__list--links">
+			<li class="nav__list--item copyright"> -->
+				<div class="nav__list--link footer__copy">&copy; Copyright 2018 Niere Theory</div>
+			<!-- </li>
+		</ul> -->
+		<!-- <ul class="nav__list--links">
 			<li class="nav__list--item">
 				<a class="nav__list--link">
 					<i class="fab fa-facebook"></i>
@@ -31,6 +31,6 @@
 					<i class="far fa-envelope"></i>
 				</a>
 			</li>
-		</ul>	
-	</div>
+		</ul>	 -->
+	<!-- </div> -->
 </footer>
