--- a/FrontEnd/src/app/dashboard/dash/chart/chart.component.css
+++ b/FrontEnd/src/app/dashboard/dash/chart/chart.component.css
@@ -1,12 +1,11 @@
 .charts {
 	display: flex;
-	margin-bottom: 2rem;
 }
 
 .chart__graph {
 	flex: 1;
 	background-color: var(--color-primary-white);
-
+    box-shadow: 0 .5rem 1rem 0 var(--color-light-black);
 	display: flex;
 	flex-flow: column;
 	justify-content: space-between;
@@ -55,7 +54,8 @@
 }
 
 .heat {
-	justify-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 800px) {
