refactor initial commit for seed and front-end

--- a/FrontEnd/src/app/dashboard/dash/chart/chart.component.html
+++ b/FrontEnd/src/app/dashboard/dash/chart/chart.component.html
@@ -1,30 +1,20 @@
-<div *ngIf="sMonthly && sRegionally" class="charts">
-	<div class="chart__graph">
-		<div class="graph--header">
-			Sales by Month
-		</div>
-		<div class="graph heat">
-			<div
-			class="graph--bar heat" *ngFor="let sale of sMonthly" [style.flex]="sale.PCT" [style.height.rem]="getMaxHeight()">
-                {{ sale.SALESUM | currency:'USD':'symbol':'1.0-0' }}
+<div *ngIf="salesByMonth" class="charts">
+    <app-monthly-chart class="chart" [salesByMonth]="salesByMonth"></app-monthly-chart>
+    <app-regional-chart class="chart"></app-regional-chart>
+    <!-- <div class="graph heat" [style.height.vh]="maxHeight">
+        <div class="chart__graph">
+            <div class="graph--header">
+                Sales by Month
+            </div>
+            <div class="graph--bar heat" *ngFor="let sale of salesByMonth" [style.flex]="sale.percentOfTotal">
+                {{ sale.summedAmount | currency:'USD':'symbol':'1.0-0' }}
                 <br>
-				{{ sale.SALEMONTH.split("T")[0] | date:'MMM' }}
-			</div>
-		</div>
-	</div>	
-	
-	<div class="chart__graph">
-		<div class="graph--header">
-				Sales by Region
-		</div>
-		<div class="graph">
-			<div class="graph--bar" *ngFor="let sale of sRegionally" [style.height]="sale.PCT/2 + 'rem'">
-				{{ sale.SALESUM | currency:'USD':'symbol':'1.0-0' }}
-				<br>
-				{{ sale.SALEREGION }}
-			</div>
-		</div>
-	</div>	
+                {{ sale.month }}
+            </div>
+        </div>
+    </div> -->
+
+
 </div>
 
 <!-- 
