--- a/FrontEnd/src/app/dashboard/dash/monthly-chart/monthly-chart.component.css
+++ b/FrontEnd/src/app/dashboard/dash/monthly-chart/monthly-chart.component.css
@@ -1,13 +1,3 @@
-.charts {
-    display: flex;
-    flex-flow: row;
-    width: 100%;
-}
-
-.chart {
-    flex: 1;
-}
-
 .chart__graph {
 	flex: 1;
     
@@ -19,19 +9,15 @@
 	justify-content: space-between;
 }
 
-.chart:not(:last-child) {
-	margin-right: 2rem;
-}
-
 .graph {
     flex: 1;
     
 	padding: 1rem;
 
 	display: flex;
-	flex-flow: row;
-	align-items: flex-end;
-	justify-content: flex-end;
+    flex-flow: row;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .graph--header {
@@ -45,28 +31,26 @@
 
 .graph--bar {
 	text-align: center;
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 	font-weight: 400;
-	color: var(--color-primary-white);
+    color: var(--color-primary-blue);
+    margin: 0 .5rem;
 
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	flex-flow: column;
 	flex: 1;
-	background-color: var(--color-primary-orange);
+    /* border-top: 1px solid var(--color-primary-orange); */
 }
 
-.graph--bar:not(:last-child) {
-	margin-right: .5rem;
+.graph--bar-axis {
+    color: var(--color-light-blue);
 }
 
-@media only screen and (max-width: 800px) {
-	.charts {
-		flex-flow: column;
-	}
-	.chart__graph {
-		margin-bottom: 1rem;
-		width: 100%;
-	}
+.graph--bar-val {
+    color: var(--color-primary-orange);
+    border-radius: 50%;
+    border: 1px solid var(--color-primary-grey);
+    padding: 2px;
 }
