--- a/FrontEnd/src/app/dashboard/dash/regional-chart/regional-chart.component.css
+++ b/FrontEnd/src/app/dashboard/dash/regional-chart/regional-chart.component.css
@@ -1,13 +1,3 @@
-.charts {
-    display: flex;
-    flex-flow: row;
-    width: 100%;
-}
-
-.chart {
-    flex: 1;
-}
-
 .chart__graph {
 	flex: 1;
     
@@ -17,10 +7,6 @@
     display: flex;
 	flex-flow: column;
 	justify-content: space-between;
-}
-
-.chart:not(:last-child) {
-	margin-right: 2rem;
 }
 
 .graph {
@@ -47,7 +33,8 @@
 	text-align: center;
 	font-size: 1.5rem;
 	font-weight: 400;
-	color: var(--color-primary-white);
+    color: var(--color-primary-white);
+    margin: 0 .5rem;
 
 	display: flex;
 	align-items: center;
@@ -55,18 +42,4 @@
 	flex-flow: column;
 	flex: 1;
 	background-color: var(--color-primary-orange);
-}
-
-.graph--bar:not(:last-child) {
-	margin-right: .5rem;
-}
-
-@media only screen and (max-width: 800px) {
-	.charts {
-		flex-flow: column;
-	}
-	.chart__graph {
-		margin-bottom: 1rem;
-		width: 100%;
-	}
 }
