--- a/FrontEnd/src/app/shared/navbar/navbar.component.html
+++ b/FrontEnd/src/app/shared/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar">
-	<ul class="nav__list">
-		<li class="nav__list--item">
-			<a routerLink="/dashboard" class="nav__list--link">Sales Dashboard</a>
-		</li>
-		<li *ngIf="loginService.userID" class="nav__list--item">
-			<a routerLink="/new" class="nav__list--link">Add Sale</a>
-		</li>
-		<!-- <li class="nav__list--item">
-			<a routerLink="/about" class="nav__list--link">About</a>
-		</li> -->
-		<li *ngIf="!loginService.userID" class="nav__list--item">
-			<a routerLink="/login" class="nav__list--link">Login</a>
+    <ul class="nav__list">
+        <li class="nav__list--item">
+            <a routerLink="/dashboard" class="nav__list--link">2018 Sales Dashboard</a>
         </li>
         <li *ngIf="loginService.userID" class="nav__list--item">
-			<a routerLink="/logout" class="nav__list--link">Logout</a>
-		</li>
-	</ul>
+            <a routerLink="/new" class="nav__list--link">Add Sale</a>
+        </li>
+        <!-- <li class="nav__list--item">
+			<a routerLink="/about" class="nav__list--link">About</a>
+		</li> -->
+        <li *ngIf="!loginService.userID" class="nav__list--item">
+            <a routerLink="/login" class="nav__list--link">Login</a>
+        </li>
+        <li *ngIf="loginService.userID" class="nav__list--item">
+            <a routerLink="/logout" class="nav__list--link">Logout</a>
+        </li>
+    </ul>
 </nav>
