--- a/FrontEnd/src/app/dashboard/dash/dash.component.html
+++ b/FrontEnd/src/app/dashboard/dash/dash.component.html
@@ -1,5 +1,8 @@
 <div class="dash">
-    <app-dash-kpi [sales]="sales"></app-dash-kpi>
-    <app-dash-chart [sales]="sales"></app-dash-chart>
-    <app-dash-table [sales]="sales"></app-dash-table>
+    <app-time-picker class="time-picker"></app-time-picker>
+    <app-dash-kpi class="dash-kpi"></app-dash-kpi>
+    <app-regional-chart class="regional-chart"></app-regional-chart>
+    <app-monthly-chart class="monthly-chart"></app-monthly-chart>
+    <app-my-sales-table class="my-sales-table"></app-my-sales-table>
+    <app-top-sales-table class="top-sales-table"></app-top-sales-table>
 </div>
