--- a/FrontEnd/src/app/dashboard/dash/regional-chart/regional-chart.component.html
+++ b/FrontEnd/src/app/dashboard/dash/regional-chart/regional-chart.component.html
@@ -1,12 +1,14 @@
-<div class="chart__graph">
+<div class="chart__graph" *ngIf="regionalSales$ | async; else loading; let regionalSales">
     <div class="graph--header">
         Sales by Region
     </div>
     <div class="graph" [style.height.vh]="maxHeight">
-        <div class="graph--bar" *ngFor="let sale of salesByRegion"
-            [style.height.vh]="getRegionHeight(sale.summedAmount)">
+        <div class="graph--bar" *ngFor="let sale of regionalSales" [style.height.vh]="sale.displayHeight - 3">
             <span>{{ sale.summedAmount | currency:'USD':'symbol':'1.0-0' }}</span>
             <span>{{ sale.region }}</span>
         </div>
     </div>
 </div>
+<ng-template #loading>
+    <app-loader [loadingText]="'Regional Graphic'"></app-loader>
+</ng-template>
