--- a/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.css
+++ b/FrontEnd/src/app/dashboard/dash/kpi/kpi.component.css
@@ -1,15 +1,15 @@
 .kpis {
 	color: var(--color-light-blue);
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    grid-gap: 1rem;
 }
 
 .kpi__card {
 	background-color: var(--color-primary-white);
 	box-shadow: 0 .5rem 1rem 0 var(--color-light-black);
 	text-align: center;
-	padding: 1rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .kpi__card:hover {
@@ -32,7 +32,7 @@
 	font-size: 1.5rem;
 }
 
-@media only screen and (max-width: 800px) {
+/* @media only screen and (max-width: 800px) {
 	.kpis {
 		grid-template-columns: repeat(3, 1fr);
 		grid-gap: 1rem;
@@ -44,4 +44,4 @@
 		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 1rem;
 	}
-}
+} */
