--- a/FrontEnd/src/app/dashboard/dash/regional-chart/regional-chart.component.css
+++ b/FrontEnd/src/app/dashboard/dash/regional-chart/regional-chart.component.css
@@ -36,6 +36,8 @@
     color: var(--color-primary-white);
     margin: 0 .5rem;
 
+    min-height: 25%;
+    
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
